--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "ddd-value-objects"
 version = "0.1.1"
-description = "Add your description here"
+description = "A collection of base classes for Domain-Driven Design (DDD) value objects and entities in Python"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.10"
 dependencies = []
 
 [build-system]
