Adds coverage reporting to project
Configures pytest-cov for test coverage reporting.

Adds pytest-cov to dev dependencies in pyproject.toml.
Configures pytest to run coverage on the src directory and
report missing lines in the terminal.

Adds .coverage to .gitignore to prevent committing coverage files.

Updates test to handle non-boolean comparison, improving robustness.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,8 @@ where = ["src"]
 [dependency-groups]
 dev = [
     "pytest==9.0.2",
+    "pytest-cov",
 ]
+
+[tool.pytest.ini_options]
+addopts = "--cov=src --cov-report=term-missing"
