--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,4 +24,4 @@ dev = [
 ]
 
 [tool.pytest.ini_options]
-addopts = "--cov=src --cov-report=term-missing"
+addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"
