--- a/.github/workflows/code.yml
+++ b/.github/workflows/code.yml
@@ -71,8 +71,15 @@ jobs:
 
   release-build:
     runs-on: ubuntu-latest
-    needs: test
-    if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
+    needs: 
+      - test
+      - create-release
+    if: |
+      always() &&
+      needs.test.result == 'success' &&
+      (github.event_name == 'release' || 
+       github.event_name == 'workflow_dispatch' || 
+       (github.event_name == 'push' && github.ref == 'refs/heads/main' && needs.create-release.result == 'success'))
 
     steps:
       - uses: actions/checkout@v4
